<resources>
    <string name="app_name">Lykke</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">173438250097502</string>
    <string name="fb_login_protocol_scheme">fb173438250097502</string>

    <!-- Firebase UI Login -->
    <string name="facebook_application_id" translatable="false">173438250097502</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb173438250097502</string>
    <string name="next_button">Next</string>
    <string name="logout">Logout</string>
    <string name="all_routes">All routes</string>
    <string name="complete_checkins">Completed</string>
    <string name="in_progress_checkins">In Progress</string>
    <string name="not_started_checkins">Not Started</string>
    <string name="route_details">Route Details</string>


    <string name="route_details_bottom_sheet_title">%1$s route</string>
    <string name="route_details_tab_title">%1$s (%2$d)</string>
    <string name="route_details_no_businesses">No businesses under this category.</string>
    <string name="route_details_business_title">%1$s%2$s</string>
    <string name="next_btn">Next</string>
    <string name="order_update_success">Order update successful</string>
    <string name="invalid_order">Order is not valid.</string>
    <string name="tax">Tax</string>
    <string name="total">Total sales</string>
    <string name="gross">Gross sales</string>
    <string name="checking_finished">Checkin complete. Great work!</string>
    <string name="order_update_failed">Failed to update order</string>
    <string name="checking_failed">Checkin failed</string>
    <string name="no_items">No items has been added to your order!</string>
    <string name="continue_button_title">Continue</string>
    <string name="invalid_payment">Invalid payment</string>
    <string name="add_business_to_route">Add business</string>
    <string name="business_add_success">Business added to your route(%1$s)</string>
    <string name="business_remove_success">Business has been removed from your route(%1$s)</string>
    <string name="route_update_failed">Failed to update your route</string>
    <string name="day_of_week">Day</string>
    <string name="route_name">Route Name</string>
    <string name="NA">Not Available</string>
    <string name="balance">Balance</string>
    <string name="last_order_amount">Last Order Amount</string>
    <string name="last_visit_date">Last Visit Date</string>
    <string name="last_payment_amount">Last Payment Amount</string>
    <string name="enter_order_title">Enter Order Details</string>
    <string name="payment_update_success">Payment update successful</string>
    <string name="payment_update_failed">Payment update failed</string>
    <string name="payment_received">Payment received</string>
    <string name="gross_amount">Gross Amount</string>
    <string name="order_details">Order Details</string>
    <string name="total_amount">Total Amount</string>
    <string name="NONE">None</string>
    <string name="holiday_message">It is a holiday!</string>
    <string name="already_checked_in">You\'ve already checked into %1$s</string>
    <string name="recheckin_message">Are you sure you want to re-checkin?</string>
    <string name="today_route">Today\'s Route</string>
    <string name="route_list_fragment_title">All Routes</string>
    <string name="business_name_transition_name">bntn</string>
    <string name="business_details_fragment_title">Business Details</string>
    <string name="enter_payment_fragment_title">Enter Payment</string>
    <string name="summary_fragment_title">Summary</string>
    <string name="route_details_title">Route - %1$s</string>
    <string name="welcome_message">Lykke Login</string>
    <string name="drawer_welcome_message">%1$s (logged in)</string>
    <string name="payment_screen">Enter payment</string>
</resources>
