<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/business_details_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/businessNameTV"
        style="@style/Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:transitionName="@string/business_name_transition_name"
        android:maxLines="2"
        android:lines="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Business Details Fragment"/>

    <TextView
        android:id="@+id/businessAddressTV"
        style="@style/Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:ellipsize="none"
        android:minLines="2"
        android:scrollHorizontally="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/businessNameTV"
        app:layout_constraintTop_toBottomOf="@+id/businessNameTV"
        tools:text="Text"/>

    <TextView
        android:id="@+id/outstandingBalanceTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="TextView"
        style="@style/Headline"
        app:layout_constraintStart_toStartOf="@+id/businessAddressTV"
        app:layout_constraintTop_toBottomOf="@+id/businessAddressTV"/>

    <TextView
        android:id="@+id/lastOrderAmountTV"
        style="@style/Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/NA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/outstandingBalanceTV"
        app:layout_constraintTop_toBottomOf="@+id/outstandingBalanceTV"/>

    <TextView
        android:id="@+id/lastVisitDateTV"
        style="@style/Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/NA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lastOrderAmountTV"
        app:layout_constraintTop_toBottomOf="@+id/lastOrderAmountTV"/>

    <TextView
        android:id="@+id/lastPaymentAmountTV"
        style="@style/Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/NA"
        app:layout_constraintStart_toStartOf="@+id/lastVisitDateTV"
        app:layout_constraintTop_toBottomOf="@+id/lastVisitDateTV"/>

    <Button
        android:id="@+id/businesss_details_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:text="Continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textView"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="Address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"/>

    <TextView
        android:id="@+id/textView2"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Business Name"
        app:layout_constraintBaseline_toBaselineOf="@+id/businessNameTV"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textView3"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="140dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/balance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/businessAddressTV"/>

    <TextView
        android:id="@+id/textView4"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/last_order_amount"
        app:layout_constraintBaseline_toBaselineOf="@+id/lastOrderAmountTV"
        app:layout_constraintEnd_toStartOf="@+id/lastOrderAmountTV"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textView5"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/last_visit_date"
        app:layout_constraintBaseline_toBaselineOf="@+id/lastVisitDateTV"
        app:layout_constraintEnd_toStartOf="@+id/lastVisitDateTV"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textView6"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:lines="2"
        android:maxLines="2"
        android:text="@string/last_payment_amount"
        app:layout_constraintBaseline_toBaselineOf="@+id/lastPaymentAmountTV"
        app:layout_constraintEnd_toStartOf="@+id/lastPaymentAmountTV"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>